--- a/_sass/modern-resume-theme.scss
+++ b/_sass/modern-resume-theme.scss
@@ -23,20 +23,20 @@ ul.icons a {
   text-align: center;
   border: 0;
   box-shadow: none;
-  padding:0;
+  padding: 0;
   border-radius: 100%;
   color: #aaa;
 }
 
 .icons i {
   font-size: 30px;
-  line-height:60px;
+  line-height: 60px;
 }
 
 .icons {
   padding: 0;
   font-size: 1em;
-  margin-bottom:20px;
+  margin-bottom: 20px;
   text-align: right;
 }
 
@@ -50,13 +50,13 @@ ul.icons a {
   margin-bottom: 3px;
 }
 
-.header-right a{
-  color:inherit;
-  font-weight:500;
+.header-right a {
+  color: inherit;
+  font-weight: 500;
 }
 
 @media screen and (max-width: 768px) {
-  .header-container div{
+  .header-container div {
     text-align: center;
   }
 
@@ -94,89 +94,120 @@ ul.icons a {
   }
 }
 
-.projects-container, .experience-container, .education-container {
+.projects-container,
+.experience-container,
+.education-container {
   h3 {
     margin-bottom: 0;
+  }
+
+  table {
+    margin-top: 20px;
+    margin-bottom: 0;
+
+    // th {
+    //   font-weight: normal;
+    // }
+  }
+
+  th {
+    font-size: 2.2rem;
+  }
+
+  td {
+    font-size: 2rem;
+  }
+
+  td.mo {
+    font-family: 'Merienda One';
   }
 }
 
 .layout {
   margin-top: 3em;
 
-  .details {
-    text-align: left;
+  // .details {
+  //   text-align: left;
+
+  p {
+    margin-bottom: 3px;
+    font-size: 1.6em;
+    // text-align: inherit;
+    font-weight: 300;
+
+    b {
+      font-weight: 500;
+    }
+  }
+
+  p.gpa {
+    @extend p;
+    font-size: 1.8em;
+  }
+
+
+  @media screen and (max-width: 768px) {
+    text-align: center;
 
     p {
-      margin-bottom: 3px;
-      font-size: 1.6em;
-      text-align: inherit;
-      font-weight: 300;
-
-      b {
-        font-weight: 500;
-      }
-    }
-
-    @media screen and (max-width: 768px) {
       text-align: center;
+    }
+  }
 
-      p {
-        text-align: center;
-      }
+  a {
+    color: inherit;
+    font-style: italic;
+    font-weight: 300;
+  }
+
+  .fa {
+    font-size: 2em;
+  }
+
+  .link {
+    font-size: 1.5em;
+  }
+
+  h4 {
+    margin-bottom: 0.1em;
+    font-weight: 500;
+
+    @media print {
+      margin-bottom: 0.2em;
     }
 
     a {
-      color: inherit;
-      font-style: italic;
-      font-weight: 300;
-    }
-
-    .fa {
-      font-size: 2em;
-    }
-
-    .link {
-      font-size: 1.5em;
-    }
-
-    h4 {
-      margin-bottom: 0.1em;
       font-weight: 500;
-
-      @media print {
-        margin-bottom: 0.2em;
-      }
-
-      a {
-        font-weight: 500;
-      }
     }
   }
+
+  // }
 }
 
-.layout-right, .layout-top-right {
-  .details {
-    text-align: right;
-  }
-}
+// .layout-right,
+// .layout-top-right {
+//   .details {
+//     text-align: right;
+//   }
+// }
 
-.layout-top-middle {
-  .details {
-    text-align: center;
-  }
-}
+// .layout-top-middle {
+//   .details {
+//     text-align: center;
+//   }
+// }
 
 .footer-container {
-  margin-top:100px;
+  margin-top: 100px;
 }
 
-.footer-container p{
+.footer-container p {
   text-align: center;
   font-style: italic;
   font-weight: 300;
 }
 
-.footer-container a{
+.footer-container a {
   color: inherit;
   font-style: italic;
   font-weight: 300;
@@ -200,9 +231,9 @@ ul.icons a {
 }
 
 p.quote {
-  font-size: 1.4em;
+  font-size: 1.6em;
   font-style: italic;
-  padding: 1em 2.5em;
+  padding: 1em 0em;
   text-align: center;
 
   @media print {
