--- a/_sass/modern-resume-theme.scss
+++ b/_sass/modern-resume-theme.scss
@@ -121,6 +121,11 @@ ul.icons a {
   td.mo {
     font-family: 'Merienda One';
   }
+
+  dl {
+    margin-bottom: 3px;
+    font-size: 1.7em;
+  }
 }
 
 .layout {
